Update ImageTileZoomView and decoders for API 31+ support and performance
- Replace deprecated `AsyncTask` with `Runnable` and `Executors` for background tasks (`BitmapLoadTask`, `TileLoadTask`, `TilesInitTask`).
- Update `SkiaImageRegionDecoder` and `SkiaPooledImageRegionDecoder` to use non-deprecated `BitmapRegionDecoder.newInstance` on API 31+.
- Rename `SubsamplingScaleImageView` styleable to `ImageTileZoomView` in `attrs.xml`.
- Fix reflection usage in `CompatDecoderFactory` by using `getDeclaredConstructor().newInstance()`.
- Add explicit `Looper.getMainLooper()` to `Handler` instances.
- General code cleanup, formatting improvements, and minor bug fixes in orientation handling.